system specs and getting connected rest of chapter

--- a/src/content/docs/en/gettingconnected.mdx
+++ b/src/content/docs/en/gettingconnected.mdx
@@ -2,16 +2,27 @@
 title: Getting Conected
 ---
 
-Scribe for Meetings offers several quick, painless ways to connect to your accessible slide presentation.
+Scribe for Meetings offers two quick, painless ways to connect to your accessible slide presentation.
 
-## Direct Link
+## Joining via Direct Link
 
 Similar to a meeting link from your teleconference platform, Scribe for Meetings offers direct links for joining your accessible slide presentation. If you receive one in your meeting invite or the meeting chat, you can click on it to instantly open Scribe for Meetings in your web browser. Once you click the "Start" button, one of two things may happen.
 1. You will hear a short chime, followed by a message informing you that Scribe for Meetings is preparing to provide access to the content in this meeting.
     1. It is normal for this to take up to three minutes, hence why it may be advisable for the meeting presenter to initialize Scribe for Meetings in advance of presenting their slides.
     1. Once the Scribe Bot joins the meeting, you will receive a second alert chime followed by a message alerting you of this fact.
 1. You may sometimes start hearing slide content being announced very shortly after clicking on "Start." This could happen if:
-    1. You are not the first visually impaired participant to enter the meeting.
+    1. You are not the first participant to enter the meeting with Scribe for Meetings.
     1. You entered a meeting late.
 
 In any case, Scribe for Meetings is now ready to start presenting the slides.
+
+## Joining via Meeting Link
+
+If for any reason you do not have the direct link, you can still attempt to join via a direct Zoom or Teams link. In order to join via the standard meeting link:
+1. Visit Scribe for Meetings.
+1. Enter the meeting URL in the edit box.
+1. Upon pressing "Go," one of two things will happen.
+    1. If the meeting is registered, you will be presented with its welcome page. You can press the "Start" button when the meeting is ready.
+    1. If the meeting is not registered, you will be given a page that allows you to do the following:
+        1. Sign up to be notified by email when the meeting is registered on Scribe for Meetings.
+        1. Register the meeting, either as the organizer or on the organizer's behalf.
