--- a/src/content/docs/en/systemspecs.mdx
+++ b/src/content/docs/en/systemspecs.mdx
@@ -1,22 +1,7 @@
 ---
 title: System Requirements
 ---
+Scribe for Meetings runs entirely on the web, thus it will work on any operating system with a modern web browser. Thus, here are a few basic requirements:
+* A conferencing platform such as Zoom or Microsoft Teams. Google Meet, Discor, etc. are not supported yet.
+* PowerPoint, Keynote, Google Slides, or any presentation application that can present a slideshow
 
-import Windows from "~/components/platform/Windows.astro"
-import MacOS from "~/components/platform/MacOS.astro"
-
-In order to run Remote Incident Manager, your system must meet or exceed the following requirements:
-
-<Windows>
-  * Windows 7 SP1 or later
-  * Windows Server 2012 or later
-  * At least 4GB of RAM
-  * Admin privileges for initial installation (not required for automatic updates)
-</Windows>
-
-<MacOS>
-  * Intel or Apple Silicon
-  * macOS Ventura or later
-  * At least 4GB of RAM
-  * Admin privileges for initial installation (not required for automatic updates)
-</MacOS>
