translated meeting prep chapter

--- a/src/content/docs/fr/makingmeetings.mdx
+++ b/src/content/docs/fr/makingmeetings.mdx
@@ -1,34 +1,37 @@
 ---
-title: Seeting Up Accessible Meetings
+title: Organiser des réunions accessibles
 ---
 
-Whether done well in advance or within minutes of the meeting's start time, the setup process is quick and efficient. The procedure for starting the meeting will vary slightly depending on your role.
+Qu'il soit effectué longtemps à l'avance ou quelques minutes avant le début de la réunion, le processus d'installation est rapide et efficace. La procédure de démarrage de la réunion varie légèrement en fonction de votre rôle.
 
-## If you are the Organizer
+## Si vous êtes l'organisateur
 
-1. Login to your Scribe for Meetings account, if you have not done so already.
-1. Enter the invite link for the meeting, then click "Go."
-1. You will land on a page informing you that this meeting has yet to be registered with Scribe for Meetings. When asked how you would like to proceed, click on "Click here if you are the organizer of this event." AS you are the event organizer, you will be able to run the registration process through to completion.
-1. Enter a meeting title in the "Title" edit box.
-	1. Note that this does not have to be the title of the meeting in your video conferencing platform.
-1. To upload your slides, click on "Browse…No file selected." A standard file browser window will appear where you can select your PowerPoint or PDF file.
-	1. Note: while PowerPoint support is complete, PDF support is currently in beta.
-1. These next settings are optional. You may skip past them and click "Done" if desired.
-	1. You will be presented a language dropdown, useful if you wish to manually enforce the language instead of using the automatic language detection.
-	1. You will be asked if you wish to have images automatically described.
-		1. Note that Scribe's image description will only attempt to describe images that lack alt text.
-	1. Lastly, you will be asked if you wish to allow the downloading of slides.
-1. Once you click "Done," Scribe will process the slides for your meeting. A percentage bar will report progress on this.
-1. Once the slides have been processed, you will be given the chance to copy a message containing the Scribe for Meetings participant link to the clipboard. You should post this in the meeting chat, in an email to your participants, or via any other accessible means.
-1. Within a few minutes of the participant clicking the link and initiating the join process, the Scribe Bot will attempt to join your meeting. If you have a waiting room, you will need to allow the bot entry into your meeting manually once you receive the alert from your video conferencing platform. In either case, the Scribe Bot will patiently await your screenshare.
-1. Launch slideshow mode in your presentation program, then share the slideshow window to your meeting participants. Any meeting participants with Scribe for Meetings loaded in their browser will begin hearing the accessible slides.
+1. Saisissez le lien d'invitation à la réunion, puis cliquez sur "Go"
+1. Vous arriverez sur une page vous informant que cette réunion n'a pas encore été enregistrée dans Scribe for Meetings. Lorsque l'on vous demande comment procéder, cliquez sur "Cliquez ici si vous êtes l'organisateur de cet événement" Si vous êtes l'organisateur de l'événement, vous pourrez lancer le processus d'enregistrement jusqu'à son terme.
+	1. Si vous n'êtes pas connecté, votre adresse électronique vous sera demandée, puis un lien de vérification vous sera envoyé par courrier électronique.
+	1. En cliquant sur ce lien, vous serez connecté, ce qui vous permettra de poursuivre le processus de création de la réunion.
+1. Saisissez le titre de la réunion dans la zone d'édition "Titre".
+	1. Notez qu'il ne doit pas nécessairement s'agir du titre de la réunion dans votre plate-forme de vidéoconférence.
+1. Pour télécharger vos diapositives, cliquez sur "Parcourir...Aucun fichier sélectionné" Une fenêtre de navigation standard s'affiche, dans laquelle vous pouvez sélectionner votre fichier PowerPoint ou PDF.
+	1. Remarque : la prise en charge de PowerPoint est complète, mais celle de PDF est actuellement en phase bêta.
+1. Les paramètres suivants sont facultatifs. Vous pouvez les ignorer et cliquer sur "Terminé" si vous le souhaitez.
+	1. Une liste déroulante de langues s'affiche, utile si vous souhaitez imposer manuellement la langue au lieu d'utiliser la détection automatique de la langue.
+	1. Il vous sera demandé si vous souhaitez que les images soient automatiquement décrites.
+		1. Notez que la description d'image de Scribe ne tentera de décrire que les images dépourvues de texte alt.
+	1. Enfin, il vous sera demandé si vous souhaitez autoriser le téléchargement des diapositives.
+1. Une fois que vous aurez cliqué sur "Terminé", Scribe traitera les diapositives pour votre réunion. Une barre de pourcentage indique l'état d'avancement.
+1. Une fois les diapositives traitées, vous aurez la possibilité de copier dans le presse-papiers un message contenant le lien du participant à Scribe for Meetings. Vous pouvez publier ce message dans le chat de la réunion, dans un e-mail adressé à vos participants ou par tout autre moyen accessible.
+1. Quelques minutes après que le participant a cliqué sur le lien et lancé le processus de participation, le Scribe Bot tentera de rejoindre votre réunion. Si vous disposez d'une salle d'attente, vous devrez autoriser manuellement l'entrée du robot dans votre réunion une fois que vous aurez reçu l'alerte de votre plateforme de visioconférence. Dans les deux cas, le Scribe Bot attendra patiemment votre partage d'écran.
+1. Lancez le mode diaporama dans votre programme de présentation, puis partagez la fenêtre du diaporama avec les participants à la réunion. Tous les participants à la réunion dont le navigateur contient Scribe for Meetings commenceront à entendre les diapositives accessibles.
 
-## If you are not the organizer:
+## Si vous n'êtes pas l'organisateur :
 
-Meetings can be set up on behalf of the organizer, who will then be able to upload the slides.
-1. Login to your Scribe for Meetings account, if you have not done so already.
-1. Enter the invite link for the meeting, then click "Go."
-1. You will land on a page informing you that this meeting has yet to be registered with Scribe for Meetings. When asked how you would like to proceed, click on "Click here if you want to register this event on behalf of the organizer."
-1. Give the meeting a title.
-1. You will be asked if you wish to have images automatically described.
-1. Once you click "Done," you will be given a message that you can copy to your clipboard and send to the person in charge of slides. Once they click the link and upload the slides, they can decide whether or not to allow slides to be downloaded.
+Les réunions peuvent être organisées au nom de l'organisateur, qui pourra alors télécharger les diapositives.
+1. Connectez-vous à votre compte Scribe for Meetings, si vous ne l'avez pas encore fait.
+1. Saisissez le lien d'invitation à la réunion, puis cliquez sur "Go"
+1. Vous arriverez sur une page vous informant que cette réunion n'a pas encore été enregistrée dans Scribe for Meetings. Lorsque l'on vous demande comment vous souhaitez procéder, cliquez sur "Cliquez ici si vous souhaitez enregistrer cet événement au nom de l'organisateur"
+	1. Si vous n'êtes pas connecté, votre adresse électronique vous sera demandée, puis un lien de vérification vous sera envoyé par courrier électronique.
+	1. En cliquant sur ce lien, vous serez connecté, ce qui vous permettra de poursuivre le processus de création de la réunion.
+1. Donnez un titre à la réunion.
+1. Il vous sera demandé si vous souhaitez que les images soient automatiquement décrites.
+1. Une fois que vous aurez cliqué sur "Terminé", vous recevrez un message que vous pourrez copier dans votre presse-papiers et envoyer à la personne chargée de la présentation. Une fois qu'elle aura cliqué sur le lien et téléchargé les diapositives, elle pourra décider d'autoriser ou non le téléchargement des diapositives.
