--- a/src/content/docs/de/makingmeetings.mdx
+++ b/src/content/docs/de/makingmeetings.mdx
@@ -1,34 +1,37 @@
 ---
-title: Seeting Up Accessible Meetings
+title: Einrichten von barrierefreien Meetings
 ---
 
-Whether done well in advance or within minutes of the meeting's start time, the setup process is quick and efficient. The procedure for starting the meeting will vary slightly depending on your role.
+Egal, ob die Einrichtung lange im Voraus oder innerhalb weniger Minuten nach Beginn der Besprechung erfolgt, sie ist schnell und effizient. Das Verfahren zum Starten der Besprechung wird je nach Ihrer Rolle leicht variieren.
 
-## If you are the Organizer
+## Wenn Sie der Organisator sind
 
-1. Login to your Scribe for Meetings account, if you have not done so already.
-1. Enter the invite link for the meeting, then click "Go."
-1. You will land on a page informing you that this meeting has yet to be registered with Scribe for Meetings. When asked how you would like to proceed, click on "Click here if you are the organizer of this event." AS you are the event organizer, you will be able to run the registration process through to completion.
-1. Enter a meeting title in the "Title" edit box.
-	1. Note that this does not have to be the title of the meeting in your video conferencing platform.
-1. To upload your slides, click on "Browse…No file selected." A standard file browser window will appear where you can select your PowerPoint or PDF file.
-	1. Note: while PowerPoint support is complete, PDF support is currently in beta.
-1. These next settings are optional. You may skip past them and click "Done" if desired.
-	1. You will be presented a language dropdown, useful if you wish to manually enforce the language instead of using the automatic language detection.
-	1. You will be asked if you wish to have images automatically described.
-		1. Note that Scribe's image description will only attempt to describe images that lack alt text.
-	1. Lastly, you will be asked if you wish to allow the downloading of slides.
-1. Once you click "Done," Scribe will process the slides for your meeting. A percentage bar will report progress on this.
-1. Once the slides have been processed, you will be given the chance to copy a message containing the Scribe for Meetings participant link to the clipboard. You should post this in the meeting chat, in an email to your participants, or via any other accessible means.
-1. Within a few minutes of the participant clicking the link and initiating the join process, the Scribe Bot will attempt to join your meeting. If you have a waiting room, you will need to allow the bot entry into your meeting manually once you receive the alert from your video conferencing platform. In either case, the Scribe Bot will patiently await your screenshare.
-1. Launch slideshow mode in your presentation program, then share the slideshow window to your meeting participants. Any meeting participants with Scribe for Meetings loaded in their browser will begin hearing the accessible slides.
+1. Geben Sie den Einladungslink für die Besprechung ein und klicken Sie dann auf "Los"
+1. Sie werden auf einer Seite landen, die Sie darüber informiert, dass dieses Meeting noch bei Scribe for Meetings registriert werden muss. Wenn Sie gefragt werden, wie Sie fortfahren möchten, klicken Sie auf "Hier klicken, wenn Sie der Organisator dieser Veranstaltung sind" Wenn Sie der Organisator der Veranstaltung sind, können Sie den Registrierungsprozess bis zum Ende durchlaufen.
+	1. Wenn Sie nicht angemeldet sind, werden Sie nach Ihrer E-Mail-Adresse gefragt, woraufhin Sie einen Bestätigungslink per E-Mail erhalten.
+	1. Wenn Sie auf diesen Link klicken, werden Sie eingeloggt und können mit der Erstellung der Veranstaltung fortfahren.
+1. Geben Sie einen Meeting-Titel in das Feld "Titel" ein.
+	1. Beachten Sie, dass dies nicht der Titel des Meetings in Ihrer Videokonferenzplattform sein muss.
+1. Um Ihre Folien hochzuladen, klicken Sie auf "Durchsuchen...Keine Datei ausgewählt" Es wird ein Standard-Dateibrowser-Fenster angezeigt, in dem Sie Ihre PowerPoint- oder PDF-Datei auswählen können.
+	1. Hinweis: Während die PowerPoint-Unterstützung vollständig ist, befindet sich die PDF-Unterstützung derzeit im Beta-Stadium.
+1. Diese nächsten Einstellungen sind optional. Sie können sie überspringen und auf "Fertig" klicken, falls gewünscht.
+	1. Es wird eine Sprachauswahl angezeigt, die nützlich ist, wenn Sie die Sprache manuell festlegen möchten, anstatt die automatische Spracherkennung zu verwenden.
+	1. Sie werden gefragt, ob Sie die Bilder automatisch beschreiben lassen möchten.
+		1. Beachten Sie, dass die Bildbeschreibung von Scribe nur versucht, Bilder zu beschreiben, die keinen Alt-Text enthalten.
+	1. Schließlich werden Sie gefragt, ob Sie das Herunterladen von Folien erlauben wollen.
+1. Sobald Sie auf "Fertig" klicken, wird Scribe die Folien für Ihr Meeting verarbeiten. Ein Prozentbalken zeigt den Fortschritt an.
+1. Sobald die Folien verarbeitet wurden, haben Sie die Möglichkeit, eine Nachricht mit dem Teilnehmerlink von Scribe for Meetings in die Zwischenablage zu kopieren. Sie sollten diese Nachricht im Meeting-Chat, in einer E-Mail an Ihre Teilnehmer oder auf einem anderen zugänglichen Weg veröffentlichen.
+1. Innerhalb weniger Minuten, nachdem der Teilnehmer auf den Link geklickt und den Beitrittsprozess eingeleitet hat, wird der Scribe Bot versuchen, Ihrem Meeting beizutreten. Wenn Sie einen Warteraum haben, müssen Sie dem Bot den Eintritt in Ihr Meeting manuell erlauben, sobald Sie die Benachrichtigung von Ihrer Videokonferenzplattform erhalten haben. In jedem Fall wird der Scribe Bot geduldig auf Ihre Bildschirmfreigabe warten.
+1. Starten Sie den Diashow-Modus in Ihrem Präsentationsprogramm und geben Sie dann das Diashow-Fenster für Ihre Meeting-Teilnehmer frei. Alle Meeting-Teilnehmer, die Scribe for Meetings in ihrem Browser geladen haben, hören nun die zugänglichen Folien.
 
-## If you are not the organizer:
+## Wenn Sie nicht der Organisator sind:
 
-Meetings can be set up on behalf of the organizer, who will then be able to upload the slides.
-1. Login to your Scribe for Meetings account, if you have not done so already.
-1. Enter the invite link for the meeting, then click "Go."
-1. You will land on a page informing you that this meeting has yet to be registered with Scribe for Meetings. When asked how you would like to proceed, click on "Click here if you want to register this event on behalf of the organizer."
-1. Give the meeting a title.
-1. You will be asked if you wish to have images automatically described.
-1. Once you click "Done," you will be given a message that you can copy to your clipboard and send to the person in charge of slides. Once they click the link and upload the slides, they can decide whether or not to allow slides to be downloaded.
+Meetings können im Namen des Organisators eingerichtet werden, der dann die Folien hochladen kann.
+1. Melden Sie sich bei Ihrem Scribe for Meetings-Konto an, falls Sie dies noch nicht getan haben.
+1. Geben Sie den Einladungslink für das Meeting ein und klicken Sie dann auf "Los"
+1. Sie werden auf einer Seite landen, die Sie darüber informiert, dass dieses Meeting noch bei Scribe for Meetings registriert werden muss. Wenn Sie gefragt werden, wie Sie fortfahren möchten, klicken Sie auf "Klicken Sie hier, wenn Sie diese Veranstaltung im Namen des Veranstalters registrieren möchten"
+	1. Wenn Sie nicht eingeloggt sind, werden Sie nach Ihrer E-Mail-Adresse gefragt, woraufhin Sie einen Bestätigungslink per E-Mail erhalten.
+	1. Wenn Sie auf diesen Link klicken, werden Sie eingeloggt und können mit der Erstellung der Veranstaltung fortfahren.
+1. Geben Sie der Besprechung einen Titel.
+1. Sie werden gefragt, ob Sie die Bilder automatisch beschreiben lassen möchten.
+1. Wenn Sie auf "Fertig" klicken, erhalten Sie eine Nachricht, die Sie in Ihre Zwischenablage kopieren und an die für die Präsentation verantwortliche Person senden können. Sobald diese Person auf den Link klickt und die Folien hochlädt, kann sie entscheiden, ob die Folien heruntergeladen werden dürfen oder nicht.
