--- a/src/content/docs/en/makingmeetings.mdx
+++ b/src/content/docs/en/makingmeetings.mdx
@@ -6,9 +6,10 @@ Whether done well in advance or within minutes of the meeting's start time, the 
 
 ## If you are the Organizer
 
-1. Login to your Scribe for Meetings account, if you have not done so already.
 1. Enter the invite link for the meeting, then click "Go."
 1. You will land on a page informing you that this meeting has yet to be registered with Scribe for Meetings. When asked how you would like to proceed, click on "Click here if you are the organizer of this event." AS you are the event organizer, you will be able to run the registration process through to completion.
+	1. If you are not logged in, you will be asked for your email address, at which point you will be emailed a verification link.
+	1. Clicking this link will log you in, thus continuing the meeting creation process.
 1. Enter a meeting title in the "Title" edit box.
 	1. Note that this does not have to be the title of the meeting in your video conferencing platform.
 1. To upload your slides, click on "Browse…No file selected." A standard file browser window will appear where you can select your PowerPoint or PDF file.
@@ -29,6 +30,8 @@ Meetings can be set up on behalf of the organizer, who will then be able to uplo
 1. Login to your Scribe for Meetings account, if you have not done so already.
 1. Enter the invite link for the meeting, then click "Go."
 1. You will land on a page informing you that this meeting has yet to be registered with Scribe for Meetings. When asked how you would like to proceed, click on "Click here if you want to register this event on behalf of the organizer."
+	1. If you are not logged in, you will be asked for your email address, at which point you will be emailed a verification link.
+	1. Clicking this link will log you in, thus continuing the meeting creation process.
 1. Give the meeting a title.
 1. You will be asked if you wish to have images automatically described.
-1. Once you click "Done," you will be given a message that you can copy to your clipboard and send to the person in charge of slides. Once they click the link and upload the slides, they can decide whether or not to allow slides to be downloaded.
+1. Once you click "Done," you will be given a message that you can copy to your clipboard and send to the person in charge of the presentation. Once they click the link and upload the slides, they can decide whether or not to allow slides to be downloaded.
