--- a/src/content/docs/es/makingmeetings.mdx
+++ b/src/content/docs/es/makingmeetings.mdx
@@ -1,34 +1,37 @@
 ---
-title: Seeting Up Accessible Meetings
+title: Organizar reuniones accesibles
 ---
 
-Whether done well in advance or within minutes of the meeting's start time, the setup process is quick and efficient. The procedure for starting the meeting will vary slightly depending on your role.
+Tanto si se hace con mucha antelación como a pocos minutos de la hora de inicio de la reunión, el proceso de preparación es rápido y eficaz. El procedimiento para iniciar la reunión variará ligeramente en función de su función.
 
-## If you are the Organizer
+## Si eres el Organizador
 
-1. Login to your Scribe for Meetings account, if you have not done so already.
-1. Enter the invite link for the meeting, then click "Go."
-1. You will land on a page informing you that this meeting has yet to be registered with Scribe for Meetings. When asked how you would like to proceed, click on "Click here if you are the organizer of this event." AS you are the event organizer, you will be able to run the registration process through to completion.
-1. Enter a meeting title in the "Title" edit box.
-	1. Note that this does not have to be the title of the meeting in your video conferencing platform.
-1. To upload your slides, click on "Browse…No file selected." A standard file browser window will appear where you can select your PowerPoint or PDF file.
-	1. Note: while PowerPoint support is complete, PDF support is currently in beta.
-1. These next settings are optional. You may skip past them and click "Done" if desired.
-	1. You will be presented a language dropdown, useful if you wish to manually enforce the language instead of using the automatic language detection.
-	1. You will be asked if you wish to have images automatically described.
-		1. Note that Scribe's image description will only attempt to describe images that lack alt text.
-	1. Lastly, you will be asked if you wish to allow the downloading of slides.
-1. Once you click "Done," Scribe will process the slides for your meeting. A percentage bar will report progress on this.
-1. Once the slides have been processed, you will be given the chance to copy a message containing the Scribe for Meetings participant link to the clipboard. You should post this in the meeting chat, in an email to your participants, or via any other accessible means.
-1. Within a few minutes of the participant clicking the link and initiating the join process, the Scribe Bot will attempt to join your meeting. If you have a waiting room, you will need to allow the bot entry into your meeting manually once you receive the alert from your video conferencing platform. In either case, the Scribe Bot will patiently await your screenshare.
-1. Launch slideshow mode in your presentation program, then share the slideshow window to your meeting participants. Any meeting participants with Scribe for Meetings loaded in their browser will begin hearing the accessible slides.
+1. Introduzca el enlace de invitación a la reunión y haga clic en "Ir"
+1. Llegará a una página en la que se le informará de que esta reunión aún no se ha registrado en Scribe for Meetings. Cuando se le pregunte cómo desea proceder, haga clic en "Haga clic aquí si es el organizador de este evento" Si usted es el organizador del evento, podrá completar el proceso de registro.
+	1. Si no ha iniciado sesión, se le pedirá su dirección de correo electrónico, momento en el que se le enviará por correo electrónico un enlace de verificación.
+	1. Al hacer clic en este enlace, iniciará la sesión y continuará con el proceso de creación de la reunión.
+1. Introduzca un título para la reunión en el cuadro de edición "Título".
+	1. Tenga en cuenta que éste no tiene por qué ser el título de la reunión en su plataforma de videoconferencia.
+1. Para cargar sus diapositivas, haga clic en "Examinar... Ningún archivo seleccionado" Aparecerá una ventana estándar del explorador de archivos donde podrá seleccionar su archivo PowerPoint o PDF.
+	1. Nota: mientras que la compatibilidad con PowerPoint es completa, la compatibilidad con PDF se encuentra actualmente en fase beta.
+1. Los siguientes ajustes son opcionales. Si lo desea, puede omitirlos y hacer clic en "Listo".
+	1. Se le presentará un menú desplegable de idiomas, útil si desea aplicar manualmente el idioma en lugar de utilizar la detección automática de idiomas.
+	1. Se le preguntará si desea que las imágenes se describan automáticamente.
+		1. Tenga en cuenta que la descripción de imágenes de Scribe sólo intentará describir las imágenes que carecen de texto alternativo.
+	1. Por último, se le preguntará si desea permitir la descarga de diapositivas.
+1. Una vez que haga clic en "Hecho", Scribe procesará las diapositivas para su reunión. Una barra de porcentaje le informará del progreso realizado.
+1. Una vez procesadas las diapositivas, tendrá la posibilidad de copiar en el portapapeles un mensaje que contenga el enlace del participante en Scribe for Meetings. Deberá publicarlo en el chat de la reunión, en un mensaje de correo electrónico a sus participantes o a través de cualquier otro medio accesible.
+1. A los pocos minutos de que el participante haga clic en el enlace e inicie el proceso de participación, el Scribe Bot intentará unirse a su reunión. Si tiene una sala de espera, tendrá que permitir la entrada del bot a su reunión manualmente una vez que reciba la alerta de su plataforma de videoconferencia. En cualquiera de los dos casos, el Scribe Bot esperará pacientemente tu screenshare.
+1. Inicie el modo de presentación de diapositivas en su programa de presentación y, a continuación, comparta la ventana de presentación de diapositivas con los participantes en la reunión. Todos los participantes en la reunión que tengan Scribe for Meetings cargado en su navegador empezarán a escuchar las diapositivas accesibles.
 
-## If you are not the organizer:
+## Si usted no es el organizador:
 
-Meetings can be set up on behalf of the organizer, who will then be able to upload the slides.
-1. Login to your Scribe for Meetings account, if you have not done so already.
-1. Enter the invite link for the meeting, then click "Go."
-1. You will land on a page informing you that this meeting has yet to be registered with Scribe for Meetings. When asked how you would like to proceed, click on "Click here if you want to register this event on behalf of the organizer."
-1. Give the meeting a title.
-1. You will be asked if you wish to have images automatically described.
-1. Once you click "Done," you will be given a message that you can copy to your clipboard and send to the person in charge of slides. Once they click the link and upload the slides, they can decide whether or not to allow slides to be downloaded.
+Las reuniones se pueden configurar en nombre del organizador, que podrá cargar las diapositivas.
+1. Inicie sesión en su cuenta de Scribe for Meetings, si aún no lo ha hecho.
+1. Introduzca el enlace de invitación a la reunión y haga clic en "Ir"
+1. Aparecerá una página en la que se le informará de que esta reunión aún no se ha registrado en Scribe for Meetings. Cuando se le pregunte cómo desea proceder, haga clic en "Haga clic aquí si desea registrar este evento en nombre del organizador"
+	1. Si no ha iniciado sesión, se le pedirá su dirección de correo electrónico, momento en el que se le enviará por correo electrónico un enlace de verificación.
+	1. Al hacer clic en este enlace, iniciará la sesión y continuará con el proceso de creación de la reunión.
+1. Asigne un título a la reunión.
+1. Se le preguntará si desea que las imágenes se describan automáticamente.
+1. Cuando hagas clic en "Hecho", recibirás un mensaje que puedes copiar en el portapapeles y enviar a la persona encargada de la presentación. Una vez que hagan clic en el enlace y carguen las diapositivas, podrán decidir si permiten o no que se descarguen las diapositivas.
