--- a/src/content/docs/it/makingmeetings.mdx
+++ b/src/content/docs/it/makingmeetings.mdx
@@ -1,34 +1,37 @@
 ---
-title: Seeting Up Accessible Meetings
+title: Impostazione di riunioni accessibili
 ---
 
-Whether done well in advance or within minutes of the meeting's start time, the setup process is quick and efficient. The procedure for starting the meeting will vary slightly depending on your role.
+Che sia fatto con largo anticipo o a pochi minuti dall'inizio della riunione, il processo di impostazione è rapido ed efficiente. La procedura di avvio della riunione varia leggermente a seconda del ruolo ricoperto.
 
-## If you are the Organizer
+## Se siete l'organizzatore
 
-1. Login to your Scribe for Meetings account, if you have not done so already.
-1. Enter the invite link for the meeting, then click "Go."
-1. You will land on a page informing you that this meeting has yet to be registered with Scribe for Meetings. When asked how you would like to proceed, click on "Click here if you are the organizer of this event." AS you are the event organizer, you will be able to run the registration process through to completion.
-1. Enter a meeting title in the "Title" edit box.
-	1. Note that this does not have to be the title of the meeting in your video conferencing platform.
-1. To upload your slides, click on "Browse…No file selected." A standard file browser window will appear where you can select your PowerPoint or PDF file.
-	1. Note: while PowerPoint support is complete, PDF support is currently in beta.
-1. These next settings are optional. You may skip past them and click "Done" if desired.
-	1. You will be presented a language dropdown, useful if you wish to manually enforce the language instead of using the automatic language detection.
-	1. You will be asked if you wish to have images automatically described.
-		1. Note that Scribe's image description will only attempt to describe images that lack alt text.
-	1. Lastly, you will be asked if you wish to allow the downloading of slides.
-1. Once you click "Done," Scribe will process the slides for your meeting. A percentage bar will report progress on this.
-1. Once the slides have been processed, you will be given the chance to copy a message containing the Scribe for Meetings participant link to the clipboard. You should post this in the meeting chat, in an email to your participants, or via any other accessible means.
-1. Within a few minutes of the participant clicking the link and initiating the join process, the Scribe Bot will attempt to join your meeting. If you have a waiting room, you will need to allow the bot entry into your meeting manually once you receive the alert from your video conferencing platform. In either case, the Scribe Bot will patiently await your screenshare.
-1. Launch slideshow mode in your presentation program, then share the slideshow window to your meeting participants. Any meeting participants with Scribe for Meetings loaded in their browser will begin hearing the accessible slides.
+1. Inserire il link di invito per la riunione, quindi fare clic su "Vai"
+1. Si aprirà una pagina che informa che questa riunione non è ancora stata registrata in Scribe for Meetings. Quando vi viene chiesto come volete procedere, fate clic su "Clicca qui se sei l'organizzatore di questo evento" Se siete l'organizzatore dell'evento, potrete portare a termine il processo di registrazione.
+	1. Se non avete effettuato l'accesso, vi verrà richiesto il vostro indirizzo e-mail e a quel punto vi verrà inviato un link di verifica.
+	1. Facendo clic su questo link si effettuerà il login, proseguendo così il processo di creazione della riunione.
+1. Inserire il titolo della riunione nella casella di modifica "Titolo".
+	1. Si noti che questo non deve essere il titolo della riunione nella piattaforma di videoconferenza.
+1. Per caricare le diapositive, fare clic su "Sfoglia... Nessun file selezionato" Verrà visualizzata una finestra di browser di file standard in cui è possibile selezionare il file PowerPoint o PDF.
+	1. Nota: mentre il supporto per PowerPoint è completo, quello per i PDF è attualmente in fase beta.
+1. Le impostazioni successive sono facoltative. Se lo si desidera, è possibile saltarle e fare clic su "Fine".
+	1. Verrà presentato un elenco a discesa della lingua, utile se si desidera imporre manualmente la lingua invece di utilizzare il rilevamento automatico della lingua.
+	1. Verrà chiesto se si desidera che le immagini vengano descritte automaticamente.
+		1. Si noti che la descrizione delle immagini di Scribe tenterà di descrivere solo le immagini prive di testo alt.
+	1. Infine, vi verrà chiesto se desiderate consentire il download delle diapositive.
+1. Una volta fatto clic su "Fatto", Scribe elaborerà le diapositive per la riunione. Una barra percentuale segnalerà i progressi compiuti.
+1. Una volta elaborate le diapositive, si avrà la possibilità di copiare negli appunti un messaggio contenente il link del partecipante a Scribe for Meetings. Questo messaggio deve essere pubblicato nella chat della riunione, in un'e-mail ai partecipanti o in qualsiasi altro modo accessibile.
+1. Entro pochi minuti dal momento in cui il partecipante fa clic sul link e avvia il processo di adesione, lo Scribe Bot tenterà di unirsi alla riunione. Se si dispone di una sala d'attesa, è necessario consentire l'ingresso del bot nella riunione manualmente una volta ricevuto l'avviso dalla piattaforma di videoconferenza. In entrambi i casi, Scribe Bot attenderà pazientemente la condivisione della schermata.
+1. Avviate la modalità presentazione nel vostro programma di presentazione, quindi condividete la finestra della presentazione con i partecipanti alla riunione. Tutti i partecipanti alla riunione con Scribe for Meetings caricato nel browser inizieranno ad ascoltare le diapositive accessibili.
 
-## If you are not the organizer:
+## Se non siete l'organizzatore:
 
-Meetings can be set up on behalf of the organizer, who will then be able to upload the slides.
-1. Login to your Scribe for Meetings account, if you have not done so already.
-1. Enter the invite link for the meeting, then click "Go."
-1. You will land on a page informing you that this meeting has yet to be registered with Scribe for Meetings. When asked how you would like to proceed, click on "Click here if you want to register this event on behalf of the organizer."
-1. Give the meeting a title.
-1. You will be asked if you wish to have images automatically described.
-1. Once you click "Done," you will be given a message that you can copy to your clipboard and send to the person in charge of slides. Once they click the link and upload the slides, they can decide whether or not to allow slides to be downloaded.
+Le riunioni possono essere impostate a nome dell'organizzatore, che potrà quindi caricare le diapositive.
+1. Accedere al proprio account Scribe for Meetings, se non lo si è già fatto.
+1. Inserire il link di invito per la riunione, quindi fare clic su "Vai"
+1. Verrà visualizzata una pagina che informa che questa riunione deve ancora essere registrata con Scribe for Meetings. Quando vi viene chiesto come volete procedere, fate clic su "Clicca qui se vuoi registrare questo evento per conto dell'organizzatore"
+	1. Se non avete effettuato l'accesso, vi verrà chiesto il vostro indirizzo e-mail e a quel punto vi verrà inviato un link di verifica.
+	1. Facendo clic su questo link si effettuerà il login, proseguendo così il processo di creazione della riunione.
+1. Assegnare un titolo alla riunione.
+1. Verrà chiesto se si desidera che le immagini vengano descritte automaticamente.
+1. Una volta fatto clic su "Fatto", viene visualizzato un messaggio che può essere copiato negli appunti e inviato alla persona responsabile della presentazione. Una volta fatto clic sul link e caricate le diapositive, il responsabile potrà decidere se consentire o meno il download delle diapositive.
