--- a/src/content/docs/pt/makingmeetings.mdx
+++ b/src/content/docs/pt/makingmeetings.mdx
@@ -1,34 +1,37 @@
 ---
-title: Seeting Up Accessible Meetings
+title: Como configurar reuniões acessíveis
 ---
 
-Whether done well in advance or within minutes of the meeting's start time, the setup process is quick and efficient. The procedure for starting the meeting will vary slightly depending on your role.
+Seja com bastante antecedência ou poucos minutos antes do início da reunião, o processo de configuração é rápido e eficiente. O procedimento para iniciar a reunião varia um pouco, dependendo de sua função.
 
-## If you are the Organizer
+## Se você for o organizador
 
-1. Login to your Scribe for Meetings account, if you have not done so already.
-1. Enter the invite link for the meeting, then click "Go."
-1. You will land on a page informing you that this meeting has yet to be registered with Scribe for Meetings. When asked how you would like to proceed, click on "Click here if you are the organizer of this event." AS you are the event organizer, you will be able to run the registration process through to completion.
-1. Enter a meeting title in the "Title" edit box.
-	1. Note that this does not have to be the title of the meeting in your video conferencing platform.
-1. To upload your slides, click on "Browse…No file selected." A standard file browser window will appear where you can select your PowerPoint or PDF file.
-	1. Note: while PowerPoint support is complete, PDF support is currently in beta.
-1. These next settings are optional. You may skip past them and click "Done" if desired.
-	1. You will be presented a language dropdown, useful if you wish to manually enforce the language instead of using the automatic language detection.
-	1. You will be asked if you wish to have images automatically described.
-		1. Note that Scribe's image description will only attempt to describe images that lack alt text.
-	1. Lastly, you will be asked if you wish to allow the downloading of slides.
-1. Once you click "Done," Scribe will process the slides for your meeting. A percentage bar will report progress on this.
-1. Once the slides have been processed, you will be given the chance to copy a message containing the Scribe for Meetings participant link to the clipboard. You should post this in the meeting chat, in an email to your participants, or via any other accessible means.
-1. Within a few minutes of the participant clicking the link and initiating the join process, the Scribe Bot will attempt to join your meeting. If you have a waiting room, you will need to allow the bot entry into your meeting manually once you receive the alert from your video conferencing platform. In either case, the Scribe Bot will patiently await your screenshare.
-1. Launch slideshow mode in your presentation program, then share the slideshow window to your meeting participants. Any meeting participants with Scribe for Meetings loaded in their browser will begin hearing the accessible slides.
+1. Digite o link de convite para a reunião e clique em "Go" (Ir)
+1. Você chegará a uma página informando que essa reunião ainda não foi registrada no Scribe for Meetings. Quando lhe for perguntado como você gostaria de proceder, clique em "Click here if you are the organizer of this event" (Clique aqui se você for o organizador deste evento) Como você é o organizador do evento, poderá executar o processo de registro até a conclusão.
+	1. Se não estiver conectado, será solicitado seu endereço de e-mail e, nesse momento, você receberá um link de verificação por e-mail.
+	1. Ao clicar nesse link, você fará o login e continuará o processo de criação da reunião.
+1. Digite um título para a reunião na caixa de edição "Title" (Título).
+	1. Observe que esse não precisa ser o título da reunião na sua plataforma de videoconferência.
+1. Para carregar seus slides, clique em "Browse...No file selected" (Procurar... Nenhum arquivo selecionado) Será exibida uma janela padrão do navegador de arquivos na qual você poderá selecionar o arquivo PowerPoint ou PDF.
+	1. Observação: embora o suporte ao PowerPoint esteja completo, o suporte a PDF está atualmente em versão beta.
+1. As próximas configurações são opcionais. Você pode passar por elas e clicar em "Done" (Concluído), se desejar.
+	1. Será apresentado um menu suspenso de idiomas, útil se você quiser impor manualmente o idioma em vez de usar a detecção automática de idioma.
+	1. Será perguntado se você deseja que as imagens sejam descritas automaticamente.
+		1. Observe que a descrição da imagem do Scribe só tentará descrever imagens que não tenham texto alternativo.
+	1. Por fim, você será perguntado se deseja permitir o download de slides.
+1. Quando você clicar em "Concluído", o Scribe processará os slides da sua reunião. Uma barra de porcentagem informará o progresso desse processo.
+1. Depois que os slides forem processados, você terá a oportunidade de copiar uma mensagem contendo o link do participante do Scribe for Meetings para a área de transferência. Você deve publicar essa mensagem no bate-papo da reunião, em um e-mail para os participantes ou por qualquer outro meio acessível.
+1. Poucos minutos depois de o participante clicar no link e iniciar o processo de participação, o Scribe Bot tentará entrar em sua reunião. Se você tiver uma sala de espera, precisará permitir a entrada do bot na reunião manualmente assim que receber o alerta da plataforma de videoconferência. Em ambos os casos, o Scribe Bot aguardará pacientemente o seu compartilhamento de tela.
+1. Inicie o modo de apresentação de slides em seu programa de apresentação e compartilhe a janela de apresentação de slides com os participantes da reunião. Todos os participantes da reunião que tiverem o Scribe for Meetings carregado em seus navegadores começarão a ouvir os slides acessíveis.
 
-## If you are not the organizer:
+## Se você não for o organizador:
 
-Meetings can be set up on behalf of the organizer, who will then be able to upload the slides.
-1. Login to your Scribe for Meetings account, if you have not done so already.
-1. Enter the invite link for the meeting, then click "Go."
-1. You will land on a page informing you that this meeting has yet to be registered with Scribe for Meetings. When asked how you would like to proceed, click on "Click here if you want to register this event on behalf of the organizer."
-1. Give the meeting a title.
-1. You will be asked if you wish to have images automatically described.
-1. Once you click "Done," you will be given a message that you can copy to your clipboard and send to the person in charge of slides. Once they click the link and upload the slides, they can decide whether or not to allow slides to be downloaded.
+As reuniões podem ser configuradas em nome do organizador, que poderá fazer o upload dos slides.
+1. Faça login em sua conta do Scribe for Meetings, caso ainda não o tenha feito.
+1. Digite o link de convite para a reunião e clique em "Go" (Ir)
+1. Você chegará a uma página informando que essa reunião ainda não foi registrada no Scribe for Meetings. Quando lhe for perguntado como você gostaria de proceder, clique em "Clique aqui se quiser registrar este evento em nome do organizador"
+	1. Se você não estiver conectado, será solicitado seu endereço de e-mail e, nesse momento, você receberá um link de verificação por e-mail.
+	1. Ao clicar nesse link, você fará o login e continuará o processo de criação da reunião.
+1. Dê um título à reunião.
+1. Será perguntado se você deseja que as imagens sejam descritas automaticamente.
+1. Depois de clicar em "Concluído", você receberá uma mensagem que poderá copiar para a área de transferência e enviar para a pessoa responsável pela apresentação. Depois que a pessoa clicar no link e carregar os slides, ela poderá decidir se deseja ou não permitir o download dos slides.
