--- a/src/content/docs/sv/makingmeetings.mdx
+++ b/src/content/docs/sv/makingmeetings.mdx
@@ -1,34 +1,37 @@
 ---
-title: Seeting Up Accessible Meetings
+title: Skapa tillgängliga möten
 ---
 
-Whether done well in advance or within minutes of the meeting's start time, the setup process is quick and efficient. The procedure for starting the meeting will vary slightly depending on your role.
+Oavsett om förberedelserna görs i god tid eller inom några minuter efter att mötet har startat går det snabbt och effektivt. Proceduren för att starta mötet kommer att variera något beroende på din roll.
 
-## If you are the Organizer
+## Om du är organisatör
 
-1. Login to your Scribe for Meetings account, if you have not done so already.
-1. Enter the invite link for the meeting, then click "Go."
-1. You will land on a page informing you that this meeting has yet to be registered with Scribe for Meetings. When asked how you would like to proceed, click on "Click here if you are the organizer of this event." AS you are the event organizer, you will be able to run the registration process through to completion.
-1. Enter a meeting title in the "Title" edit box.
-	1. Note that this does not have to be the title of the meeting in your video conferencing platform.
-1. To upload your slides, click on "Browse…No file selected." A standard file browser window will appear where you can select your PowerPoint or PDF file.
-	1. Note: while PowerPoint support is complete, PDF support is currently in beta.
-1. These next settings are optional. You may skip past them and click "Done" if desired.
-	1. You will be presented a language dropdown, useful if you wish to manually enforce the language instead of using the automatic language detection.
-	1. You will be asked if you wish to have images automatically described.
-		1. Note that Scribe's image description will only attempt to describe images that lack alt text.
-	1. Lastly, you will be asked if you wish to allow the downloading of slides.
-1. Once you click "Done," Scribe will process the slides for your meeting. A percentage bar will report progress on this.
-1. Once the slides have been processed, you will be given the chance to copy a message containing the Scribe for Meetings participant link to the clipboard. You should post this in the meeting chat, in an email to your participants, or via any other accessible means.
-1. Within a few minutes of the participant clicking the link and initiating the join process, the Scribe Bot will attempt to join your meeting. If you have a waiting room, you will need to allow the bot entry into your meeting manually once you receive the alert from your video conferencing platform. In either case, the Scribe Bot will patiently await your screenshare.
-1. Launch slideshow mode in your presentation program, then share the slideshow window to your meeting participants. Any meeting participants with Scribe for Meetings loaded in their browser will begin hearing the accessible slides.
+1. Ange inbjudningslänken för mötet och klicka sedan på "Gå"
+1. Du kommer till en sida som informerar dig om att detta möte ännu inte har registrerats i Scribe for Meetings. När du får frågan om hur du vill gå vidare klickar du på "Klicka här om du är arrangör för detta evenemang." Om du är arrangör för evenemanget kommer du att kunna slutföra registreringsprocessen.
+	1. Om du inte är inloggad kommer du att bli ombedd att ange din e-postadress, varefter du kommer att få en verifieringslänk skickad till dig via e-post.
+	1. Om du klickar på denna länk loggas du in och kan fortsätta processen med att skapa mötet.
+1. Ange en mötestitel i redigeringsrutan "Titel".
+	1. Observera att detta inte behöver vara titeln på mötet i din videokonferensplattform.
+1. För att ladda upp dina bilder klickar du på "Bläddra...Ingen fil vald" Ett standardfönster för filbläddrare visas där du kan välja din PowerPoint- eller PDF-fil.
+	1. Observera: PowerPoint-stödet är komplett, men PDF-stödet är för närvarande i betaversion.
+1. De följande inställningarna är valfria. Du kan hoppa över dem och klicka på "Klar" om du vill.
+	1. Du kommer att se en rullgardinsmeny för språk, användbar om du vill välja språk manuellt istället för att använda den automatiska språkdetekteringen.
+	1. Du kommer att tillfrågas om du vill att bilder ska beskrivas automatiskt.
+		1. Observera att Scribes bildbeskrivning endast kommer att försöka beskriva bilder som saknar alt-text.
+	1. Slutligen kommer du att bli tillfrågad om du vill tillåta nedladdning av bilder.
+1. När du klickar på "Klar" kommer Scribe att bearbeta bilderna för ditt möte. En procentuell stapel kommer att rapportera framsteg på detta.
+1. När bilderna har bearbetats får du möjlighet att kopiera ett meddelande som innehåller deltagarlänken till Scribe for Meetings till urklipp. Du bör publicera detta i möteschatten, i ett e-postmeddelande till dina deltagare eller på något annat tillgängligt sätt.
+1. Inom några minuter efter att deltagaren har klickat på länken och påbörjat anslutningsprocessen kommer Scribe Bot att försöka ansluta sig till ditt möte. Om du har ett väntrum måste du tillåta botens inträde i ditt möte manuellt när du får varningen från din videokonferensplattform. I båda fallen kommer Scribe Bot tålmodigt att invänta din skärmdelning.
+1. Starta bildspelsläget i ditt presentationsprogram och dela sedan bildspelsfönstret med dina mötesdeltagare. Alla mötesdeltagare som har Scribe for Meetings laddat i sin webbläsare kommer att börja höra de tillgängliga bilderna.
 
-## If you are not the organizer:
+## Om du inte är arrangören:
 
-Meetings can be set up on behalf of the organizer, who will then be able to upload the slides.
-1. Login to your Scribe for Meetings account, if you have not done so already.
-1. Enter the invite link for the meeting, then click "Go."
-1. You will land on a page informing you that this meeting has yet to be registered with Scribe for Meetings. When asked how you would like to proceed, click on "Click here if you want to register this event on behalf of the organizer."
-1. Give the meeting a title.
-1. You will be asked if you wish to have images automatically described.
-1. Once you click "Done," you will be given a message that you can copy to your clipboard and send to the person in charge of slides. Once they click the link and upload the slides, they can decide whether or not to allow slides to be downloaded.
+Möten kan skapas på uppdrag av arrangören, som då kommer att kunna ladda upp bilderna.
+1. Logga in på ditt Scribe for Meetings-konto, om du inte redan har gjort det.
+1. Ange inbjudningslänken för mötet och klicka sedan på "Gå"
+1. Du kommer till en sida som informerar dig om att detta möte ännu inte har registrerats i Scribe for Meetings. När du får frågan om hur du vill gå vidare klickar du på "Klicka här om du vill registrera detta evenemang på uppdrag av arrangören."
+	1. Om du inte är inloggad kommer du att bli ombedd att ange din e-postadress, varefter du kommer att få en verifieringslänk skickad till dig.
+	1. Om du klickar på den här länken loggar du in och kan fortsätta skapa mötet.
+1. Ge mötet en titel.
+1. Du kommer att bli tillfrågad om du vill att bilder ska beskrivas automatiskt.
+1. När du klickar på "Klar" får du ett meddelande som du kan kopiera till urklipp och skicka till den person som ansvarar för presentationen. När de klickar på länken och laddar upp bilderna kan de bestämma om bilderna ska kunna laddas ner eller inte.
