--- a/src/content/docs/en/makingmeetings.mdx
+++ b/src/content/docs/en/makingmeetings.mdx
@@ -33,5 +33,6 @@ Meetings can be set up on behalf of the organizer, who will then be able to uplo
 	1. If you are not logged in, you will be asked for your email address, at which point you will be emailed a verification link.
 	1. Clicking this link will log you in, thus continuing the meeting creation process.
 1. Give the meeting a title.
+	1. Note that this does not have to be the title of the meeting in your video conferencing platform.
 1. You will be asked if you wish to have images automatically described.
 1. Once you click "Done," you will be given a message that you can copy to your clipboard and send to the person in charge of the presentation. Once they click the link and upload the slides, they can decide whether or not to allow slides to be downloaded.
