--- a/src/content/docs/es/makingmeetings.mdx
+++ b/src/content/docs/es/makingmeetings.mdx
@@ -33,5 +33,6 @@ Las reuniones se pueden configurar en nombre del organizador, que podrá cargar 
 	1. Si no ha iniciado sesión, se le pedirá su dirección de correo electrónico, momento en el que se le enviará por correo electrónico un enlace de verificación.
 	1. Al hacer clic en este enlace, iniciará la sesión y continuará con el proceso de creación de la reunión.
 1. Asigne un título a la reunión.
+	1. Tenga en cuenta que éste no tiene por qué ser el título de la reunión en su plataforma de videoconferencia.
 1. Se le preguntará si desea que las imágenes se describan automáticamente.
 1. Cuando hagas clic en "Hecho", recibirás un mensaje que puedes copiar en el portapapeles y enviar a la persona encargada de la presentación. Una vez que hagan clic en el enlace y carguen las diapositivas, podrán decidir si permiten o no que se descarguen las diapositivas.
