--- a/src/content/docs/it/makingmeetings.mdx
+++ b/src/content/docs/it/makingmeetings.mdx
@@ -33,5 +33,6 @@ Le riunioni possono essere impostate a nome dell'organizzatore, che potrà quind
 	1. Se non avete effettuato l'accesso, vi verrà chiesto il vostro indirizzo e-mail e a quel punto vi verrà inviato un link di verifica.
 	1. Facendo clic su questo link si effettuerà il login, proseguendo così il processo di creazione della riunione.
 1. Assegnare un titolo alla riunione.
+	1. Si noti che questo non deve essere il titolo della riunione nella piattaforma di videoconferenza.
 1. Verrà chiesto se si desidera che le immagini vengano descritte automaticamente.
 1. Una volta fatto clic su "Fatto", viene visualizzato un messaggio che può essere copiato negli appunti e inviato alla persona responsabile della presentazione. Una volta fatto clic sul link e caricate le diapositive, il responsabile potrà decidere se consentire o meno il download delle diapositive.
