--- a/src/content/docs/de/faq.mdx
+++ b/src/content/docs/de/faq.mdx
@@ -3,7 +3,7 @@ title: Häufig gestellte Fragen
 ---
 
 Hier finden Sie Antworten auf einige häufig gestellte Fragen zu Scribe for Meetings. Wenn Sie mit einem Problem konfrontiert werden, beziehen Sie sich bitte wann immer möglich auf dieses Dokument.  
-Sie sehen Ihre Frage nicht? [Kontaktieren Sie uns.](https://pneumasolutions.com/contact/), und wir klären alles Weitere mit Ihnen.
+Sie sehen Ihre Frage nicht? [Kontaktieren Sie uns](https://pneumasolutions.com/contact/), und wir klären alles Weitere mit Ihnen.
 
 ## Was ist Scribe for Meetings?
 
