--- a/src/content/docs/es/faq.mdx
+++ b/src/content/docs/es/faq.mdx
@@ -3,7 +3,7 @@ title: Preguntas frecuentes
 ---
 
 A continuación encontrará respuestas a algunas preguntas frecuentes sobre Scribe for Meetings. Cuando se enfrente a un problema, consulte este documento siempre que sea posible.  
-¿No encuentra su pregunta? [Póngase en contacto con nosotros (https://pneumasolutions.com/contact/) y le ayudaremos a aclararla.
+¿No encuentra su pregunta? [Póngase en contacto con nosotros](https://pneumasolutions.com/contact/) y le ayudaremos a aclararla.
 
 ## ¿Qué es Scribe for Meetings?
 
