--- a/src/content/docs/fr/faq.mdx
+++ b/src/content/docs/fr/faq.mdx
@@ -3,7 +3,7 @@ title: Questions fréquemment posées
 ---
 
 Voici les réponses à certaines questions courantes concernant Scribe for Meetings. En cas de problème, veuillez vous référer à ce document dans la mesure du possible.  
-Vous ne trouvez pas votre question ? [Contactez-nous (https://pneumasolutions.com/contact/), et nous vous aiderons à résoudre votre problème.
+Vous ne trouvez pas votre question ? [Contactez-nous ](https://pneumasolutions.com/contact/), et nous vous aiderons à résoudre votre problème.
 
 ## Qu'est-ce que Scribe for Meetings ?
 
