--- a/src/content/docs/sv/faq.mdx
+++ b/src/content/docs/sv/faq.mdx
@@ -3,7 +3,7 @@ title: Ofta ställda frågor
 ---
 
 Här hittar du svar på några vanliga frågor om Scribe for Meetings. När du ställs inför ett problem, vänligen hänvisa till detta dokument när det är möjligt.  
-Ser du inte din fråga? [Kontakta oss.](https://pneumasolutions.com/contact/), så hjälper vi dig att komma igång.
+Ser du inte din fråga? [Kontakta oss](https://pneumasolutions.com/contact/), så hjälper vi dig att komma igång.
 
 ## Vad är Scribe för möten?
 
