fixes a line beak in the list

--- a/src/content/docs/en/faq.mdx
+++ b/src/content/docs/en/faq.mdx
@@ -74,8 +74,7 @@ For a meeting where this feature is enabled, as soon as the presenter has shown 
 ## I host many meetings, and I want to allow my attendees to download the slides for all of these meetings. Can I turn this feature on by default?
 
 Yes. Follow these steps:
-1. 
-Go to ScribeForMeetings.com.
+1. Go to ScribeForMeetings.com.
 1. If there’s a “Log In” link at the top of the page, click it, enter your email address, and follow the instructions to log into Scribe for Meetings.
 1. Click “Settings”, then “Meeting Defaults”.
 1. Check the checkbox called “Allow attendees to download accessible versions of slides”, then click “Save”.
