--- a/src/content/docs/es/meetingcontrols.mdx
+++ b/src/content/docs/es/meetingcontrols.mdx
@@ -1,8 +1,11 @@
 ---
-title: Administration and Account Settings 
+title: The RIM Management Dashboard
 ---
 
-Scribe  for Meetings features a  web-based dashboard to facilitate various platform and account management tasks. You can manage your existing unattended computers, create preconfigured installers for target computers, and much more.  
+import Windows from "~/components/platform/Windows.astro"
+import MacOS from "~/components/platform/MacOS.astro"
+
+RIM features a  web-based dashboard to facilitate various machine and account management tasks. You can manage your existing unattended computers, create preconfigured installers for target computers, and much more.  
 It should be noted that the feature set of the dashboard is largely dependent on which subscription tier your account is under. For example, enterprise users can assign machines to target groups, as well as create silent installers. On the other hand, anyone (including personal users) can create custom installers for their unattended machines.
 
 ## Locating the Dashboard
